drae: fix nameplate overlapping the border

--- a/webAO/styles/chatbox/drae.css
+++ b/webAO/styles/chatbox/drae.css
@@ -42,7 +42,8 @@
 #client_name {
 	display: block;
 	padding: 0 0.45em;
-	height: 24%;
+	height: 22%;
+	height: calc(25% - 0.1em);
 	min-width: 50%;
 	text-align: left;
 	letter-spacing: 0.075em;
@@ -71,8 +72,8 @@
 	width: 100%;
 	margin: auto;
 	height: 75%;
-    border-top: 2px solid #ff00ab;
-    border-bottom: 2px solid #e9019e;
+    border-top: 0.1em solid #ff00ab;
+    border-bottom: 0.1em solid #e9019e;
 	background-image: linear-gradient(rgba(33,18,28,0.75),rgba(45,18,36,0.75));
 	bottom: 0;
 	left: 0;
@@ -86,7 +87,7 @@
 
 #client_inner_chat {
 	padding: 1% 3.13%;
-	margin: 1px;
+	margin: 0;
 	line-height: 97%;
 	letter-spacing: 0.05em;
 	word-spacing: 0.3em;
